Slår sammen perioder og sjekker om de er ulike før vi lagrer